--- a/src/main/resources/static/problem.html
+++ b/src/main/resources/static/problem.html
@@ -1,13 +1,31 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>문제 상세</title>
+    <link rel="stylesheet" href="/css/problem.css">
 </head>
 <body>
-    problem page
+<div class="container">
+    <div class="left-section">
+        <div class="content-box" id="contentBox">
+            <h2 id="title">문제 제목</h2>
+            <p id="content">문제 내용...</p>
+        </div>
+        <div class="chat-box" id="chatBox" style="display: none;">
+            <h3>AI와의 대화</h3>
+            <div id="chat-messages"></div>
+            <div class="chat-footer">
+                <a href="/"><button id="problemListButton">문제 목록으로 가기</button></a>
+            </div>
+        </div>
+        <button id="challengeButton" onclick="startChallenge()">도전</button>
+    </div>
+    <div class="right-section">
+        <!-- 오른쪽 섹션은 상세 페이지로 이동 시 표시 -->
+    </div>
+</div>
+<script src="/js/problem.js"></script>
 </body>
 </html>
