--- a/src/main/resources/static/problems.html
+++ b/src/main/resources/static/problems.html
@@ -1,13 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>문제 목록</title>
+    <link rel="stylesheet" href="./css/problems.css">
 </head>
 <body>
-    problem list page
+<div class="container">
+    <h1>문제 목록</h1>
+    <div class="filter-section">
+        <select id="category">
+            <option value="">상태</option>
+            <option value="solved">해결</option>
+            <option value="unsolved">미해결</option>
+        </select>
+        <select id="difficulty">
+            <option value="">난이도</option>
+            <option value="EASY">EASY</option>
+            <option value="NORMAL">NORMAL</option>
+            <option value="HARD">HARD</option>
+        </select>
+        <input type="text" id="keyword" placeholder="검색어를 입력하세요">
+        <button onclick="fetchProblems()">검색</button>
+    </div>
+    <div id="problem-list">
+        <!-- 문제 카드는 JavaScript로 동적 생성됩니다 -->
+    </div>
+</div>
+<script src="./js/problems.js"></script>
 </body>
 </html>
