--- a/src/main/resources/static/problems.html
+++ b/src/main/resources/static/problems.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문제 목록</title>
-    <link rel="stylesheet" href="./css/problems.css">
+    <link rel="stylesheet" href="/css/problems.css">
 </head>
 <body>
 <div class="container">
@@ -28,6 +28,6 @@
         <!-- 문제 카드는 JavaScript로 동적 생성됩니다 -->
     </div>
 </div>
-<script src="./js/problems.js"></script>
+<script src="/js/problems.js"></script>
 </body>
 </html>
